dev: security v3