@@ -5,16 +5,19 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
+import java.util.Arrays;
 import java.util.Collection;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 public class AppUserDetails implements UserDetails {
+
     private final User user;
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return user.getRoles().stream().map(roleType -> new SimpleGrantedAuthority(roleType.name())).collect(Collectors.toList());
+        return Arrays.stream(user.getRoles().split(", "))
+                .map(SimpleGrantedAuthority::new)
+                .toList();
     }
 
     @Override
